test/spec_vectors/exports/ok/module_0.wat
(module (func) (export "a" (func 0)))