test/spec_vectors/exports/fail/module_85.wat
(module (memory 0) (func) (export "a" (memory 0)) (export "a" (func 0)))